Fixed errant whitespace at base of body.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,6 @@
 @import "profile_page";
 
 body {
-  min-height: 2000px;
   padding-top: 70px;
 }
 
